k8s/coma/apps/nextcloud/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  parentRefs:
    - name: web-gateway
      namespace: networking
      sectionName: artichoke-cc-https
  hostnames:
    - nc.artichoke.cc
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/carddav
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /remote.php/dav
            statusCode: 301
      timeouts:
        request: 120s
        backendRequest: 120s

    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/caldav
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /remote.php/dav
            statusCode: 301

    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/webfinger
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /index.php/.well-known/webfinger
            statusCode: 301

    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/nodeinfo
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /index.php/.well-known/nodeinfo
            statusCode: 301

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud
          port: 8080
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Strict-Transport-Security
                value: "max-age=31536000; includeSubDomains; preload"
      timeouts:
        request: 120s
        backendRequest: 120s
